django db practice

--- a/djpro11ex/pro11app/templates/list.html
+++ b/djpro11ex/pro11app/templates/list.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 ♥♡ 가족 목록 ♡♥<p/>
+<a href="/family/insert">자료 추가</a>
 <table border="1">
 	<tr><th>id</th><th>이름</th><th>나이</th><th>전화</th><th>성별</th></tr>
 	{% if fdatas %}  <!--QuerySet 타입일때만 반복문 가능-->
